cmake_minimum_required ( VERSION 3.17)
project (hello)

set( CMAKE_CXX_STANDARD 17)

add_executable (hello main.cpp ../../../../../Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/vector ../../../../../Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/vector)